<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.reviewer.NavigationFragment">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingBottom="50dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.gauravk.bubblenavigation.BubbleNavigationLinearView
        android:id="@+id/BubbleNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="21dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/bg_rounded_rect_nav"
        android:elevation="2dp"
        android:paddingVertical="6dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/itemPlant"
            android:layout_width="20dp"
            android:layout_height="42dp"
            android:layout_weight="1"
            app:bt_colorActive="@color/green_active"
            app:bt_colorInactive="@color/default_inactive"
            app:bt_icon="@drawable/ic_plantdoang"
            app:bt_shape="@drawable/bg_plant_stroke"
            app:bt_title="@string/plant" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/add"
            app:bt_icon="@drawable/ic_baseline_add_24"
            app:bt_title="@string/app_name"
            android:layout_width="72dp"
            android:layout_height="42dp"/>

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/itemKriya"
            android:layout_width="20dp"
            android:layout_height="42dp"
            android:layout_weight="1"
            app:bt_colorActive="@color/red_active"
            app:bt_colorInactive="@color/default_inactive"
            app:bt_icon="@drawable/ic_kriyadoang"
            app:bt_shape="@drawable/bg_kriya_stroke"
            app:bt_title="@string/kriya" />

    </com.gauravk.bubblenavigation.BubbleNavigationLinearView>

</androidx.constraintlayout.widget.ConstraintLayout>