<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/bottomSheetContainerUpdate"
    android:paddingHorizontal="16dp"
    android:background="@drawable/bottom_sheet_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:text="@string/my_info" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/textColorScreen"/>

    <FrameLayout
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="16dp"
        android:layout_width="90dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_gravity="end|bottom"
            android:src="@drawable/ic_edit_white"
            android:elevation="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <com.blogspot.atifsoftwares.circularimageview.CircularImageView
        android:id="@+id/profile_pic_update"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:elevation="4dp"
        android:layout_gravity="center_horizontal"
        app:c_border="true"
        app:c_border_color="@color/colorAccent"
        android:src="@drawable/pp1"
        app:c_border_width="1dp"/>


    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:errorEnabled="true"
        android:layout_marginBottom="6dp">
        <EditText
            android:id="@+id/edt_name_update"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textSize="15sp"
            android:inputType="textPersonName"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp">
        <EditText
            android:id="@+id/edt_email_update"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:errorEnabled="true"
            android:textSize="15sp"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp">
        <EditText
            android:id="@+id/edt_phone_update"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone"
            app:errorEnabled="true"
            android:textSize="15sp"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>
<!--    -->
<!--    <androidx.appcompat.widget.SwitchCompat-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/openReviewer"-->
<!--        android:textColor="@color/colorAccent"-->
<!--        android:text="Open Reviewer"/>-->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="12sp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/bg_update_stroke"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_gravity="center_horizontal"
            android:text="@string/update"/>
        <Button
            android:id="@+id/cancel_update_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="15sp"
            android:layout_toStartOf="@id/btn_update"
            android:layout_toLeftOf="@id/btn_update"
            android:background="@drawable/shape_rect04"
            style="@style/Widget.MaterialComponents.Button.TextButton"                android:layout_gravity="center_horizontal"
            android:text="Cancel"/>
    </RelativeLayout>

</LinearLayout>