<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorAccent"
    tools:context=".fragment.user.NoteUserFragment">

    <TextView
        android:id="@+id/textMyNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/my_note"
        android:textSize="@dimen/_20ssp"
        android:textColor="@color/textColorScreenMenu"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/searchbtn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:gravity="center_vertical"
        android:background="@drawable/shape_search"
        android:contentDescription="@string/app_name"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="@dimen/_6sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_8sdp"
        android:text="Search"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textMyNote" />
    
    <LinearLayout
        android:id="@+id/layout_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/shape_search"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/textMyNote">


        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_search"/>

        <EditText
            android:id="@+id/input_search"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:background="@null"
            android:fontFamily="@font/ubuntu_reguler"
            android:hint="@string/search_note"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textColorHint="@color/textColorScreenMenu"
            android:textSize="@dimen/_13ssp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lvewqwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/searchbtn"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/noteRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_2sdp"
        android:clipToPadding="false"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@id/layoutQuickAction"
        app:layout_constraintTop_toBottomOf="@id/lvewqwd"/>
    <LinearLayout
        android:id="@+id/layoutQuickAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/productGridBackgroundColor"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/image_add_note"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_add_circle_outline_24"
            android:tint="@color/colorAccent"/>
        <ImageView
            android:id="@+id/image_add_image"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_photo_library_24"
            android:tint="@color/colorAccent"/>
        <ImageView
            android:id="@+id/image_add_web"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_web_link"
            android:tint="@color/colorAccent"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/addNoteBtn"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:background="@drawable/bg_addnote"
        android:src="@drawable/ic_baseline_add_24"
        android:tint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/layoutQuickAction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/layoutQuickAction"/>

</androidx.constraintlayout.widget.ConstraintLayout>